examples/react-multi-framework-api/force-app/main/default/objects/Donation_Page_Setting__mdt/Donation_Page_Setting__mdt.object-meta.xml
<CustomObject>
    <label>Donation Page Setting</label>
    <pluralLabel>Donation Page Settings</pluralLabel>
    <description>Org-specific configuration for the public React donation page (amount bounds, allowed FinDock payment methods, processor, payer record type). Edit the record named "Default" when porting to another org.</description>
</CustomObject>