examples/react-multi-framework-api/force-app/main/default/objects/Donation_Page_Setting__mdt/fields/Allowed_Return_Hosts__c.field-meta.xml
<CustomField>
    <fullName>Allowed_Return_Hosts__c</fullName>
    <label>Allowed Return Hosts</label>
    <description>Optional comma-separated extra hostnames the success/failure return URLs may point to. The site host and the org domain are always allowed.</description>
    <inlineHelpText>Optional comma-separated extra hostnames the success/failure return URLs may point to. The site host and the org domain are always allowed.</inlineHelpText>
    <type>Text</type>
    <length>255</length>
</CustomField>