examples/react-multi-framework-api/force-app/main/default/objects/Donation_Page_Setting__mdt/fields/Currency_ISO_Code__c.field-meta.xml
<CustomField>
    <fullName>Currency_ISO_Code__c</fullName>
    <label>Currency ISO Code</label>
    <description>ISO 4217 currency for all donations (e.g. EUR). Sent explicitly so the org default currency is never assumed.</description>
    <inlineHelpText>ISO 4217 currency for all donations (e.g. EUR). Sent explicitly so the org default currency is never assumed.</inlineHelpText>
    <type>Text</type>
    <length>3</length>
</CustomField>