examples/react-multi-framework-api/force-app/main/default/objects/Donation_Page_Setting__mdt/fields/Max_Amount__c.field-meta.xml
<CustomField>
    <fullName>Max_Amount__c</fullName>
    <label>Maximum Amount</label>
    <description>Largest donation accepted (whole currency units). Enforced server-side.</description>
    <inlineHelpText>Largest donation accepted (whole currency units). Enforced server-side.</inlineHelpText>
    <type>Number</type>
    <precision>10</precision>
    <scale>2</scale>
</CustomField>