examples/react-multi-framework-api/force-app/main/default/objects/Donation_Page_Setting__mdt/fields/Min_Amount__c.field-meta.xml
<CustomField>
    <fullName>Min_Amount__c</fullName>
    <label>Minimum Amount</label>
    <description>Smallest donation accepted (whole currency units). Enforced server-side.</description>
    <inlineHelpText>Smallest donation accepted (whole currency units). Enforced server-side.</inlineHelpText>
    <type>Number</type>
    <precision>10</precision>
    <scale>2</scale>
</CustomField>