examples/react-multi-framework-api/force-app/main/default/objects/Donation_Page_Setting__mdt/fields/One_Time_Methods__c.field-meta.xml
<CustomField>
    <fullName>One_Time_Methods__c</fullName>
    <label>One-Time Payment Methods</label>
    <description>Comma-separated FinDock payment method names offered for one-time gifts, in display order (e.g. Ideal,CreditCard). Only methods active in the org are shown.</description>
    <inlineHelpText>Comma-separated FinDock payment method names offered for one-time gifts, in display order (e.g. Ideal,CreditCard). Only methods active in the org are shown.</inlineHelpText>
    <type>Text</type>
    <length>255</length>
</CustomField>