examples/react-multi-framework-api/force-app/main/default/objects/Donation_Page_Setting__mdt/fields/One_Time_Presets__c.field-meta.xml
<CustomField>
    <fullName>One_Time_Presets__c</fullName>
    <label>One-Time Presets</label>
    <description>Comma-separated preset amounts for one-time gifts. Optional impact hint after a pipe, e.g. 10|Feeds a family for a week,25|...,50</description>
    <inlineHelpText>Comma-separated preset amounts for one-time gifts. Optional impact hint after a pipe, e.g. 10|Feeds a family for a week,25|...,50</inlineHelpText>
    <type>Text</type>
    <length>255</length>
</CustomField>