examples/react-multi-framework-api/force-app/main/default/objects/Donation_Page_Setting__mdt/fields/Organisation_Name__c.field-meta.xml
<CustomField>
    <fullName>Organisation_Name__c</fullName>
    <label>Organisation Name</label>
    <description>Name of the charity shown in the page header and receipts copy.</description>
    <inlineHelpText>Name of the charity shown in the page header and receipts copy.</inlineHelpText>
    <type>Text</type>
    <length>80</length>
</CustomField>