examples/react-multi-framework-api/force-app/main/default/objects/Donation_Page_Setting__mdt/fields/Origin__c.field-meta.xml
<CustomField>
    <fullName>Origin__c</fullName>
    <label>Origin</label>
    <description>Value written to the FinDock Origin field so gifts from this page are recognisable in reports.</description>
    <inlineHelpText>Value written to the FinDock Origin field so gifts from this page are recognisable in reports.</inlineHelpText>
    <type>Text</type>
    <length>80</length>
</CustomField>