examples/react-multi-framework-api/force-app/main/default/objects/Donation_Page_Setting__mdt/fields/Payment_Processor__c.field-meta.xml
<CustomField>
    <fullName>Payment_Processor__c</fullName>
    <label>Payment Processor</label>
    <description>Optional FinDock processor name to force (e.g. PaymentHub-Stripe). Leave blank to use the processor FinDock marks as default for each method.</description>
    <inlineHelpText>Optional FinDock processor name to force (e.g. PaymentHub-Stripe). Leave blank to use the processor FinDock marks as default for each method.</inlineHelpText>
    <type>Text</type>
    <length>80</length>
</CustomField>