examples/react-multi-framework-api/force-app/main/default/objects/Donation_Page_Setting__mdt/fields/Recurring_Presets__c.field-meta.xml
<CustomField>
    <fullName>Recurring_Presets__c</fullName>
    <label>Recurring Presets</label>
    <description>Comma-separated preset amounts for monthly gifts, optional impact hint after a pipe.</description>
    <inlineHelpText>Comma-separated preset amounts for monthly gifts, optional impact hint after a pipe.</inlineHelpText>
    <type>Text</type>
    <length>255</length>
</CustomField>