examples/react-multi-framework-api/force-app/main/default/objects/Donation_Page_Setting__mdt/fields/Source_Connector__c.field-meta.xml
<CustomField>
    <fullName>Source_Connector__c</fullName>
    <label>Source Connector</label>
    <description>Optional FinDock source connector (e.g. FinDock-for-Fundraising). Leave blank to use the org default.</description>
    <inlineHelpText>Optional FinDock source connector (e.g. FinDock-for-Fundraising). Leave blank to use the org default.</inlineHelpText>
    <type>Text</type>
    <length>80</length>
</CustomField>